--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular-eslint/eslint-plugin-template": "~12.0.0",
     "@angular-eslint/template-parser": "~12.0.0",
     "@angular/cli": "~12.1.1",
+    "@angular/common": "~10.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
@@ -60,6 +61,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
+    "sweetalert2": "^10.2.0",
     "typescript": "~4.2.4"
   },
   "description": "An Ionic project"
