--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.2.5",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/app-scripts": "^3.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -60,8 +61,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
     "sweetalert2": "^10.2.0",
+    "ts-node": "~8.3.0",
     "typescript": "~4.2.4"
   },
   "description": "An Ionic project"
